# eros

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: config.rs  error.rs  file.rs  lib.rs  optimizer.rs  pipeline.rs  prelude.rs  processor.rs  rating.rs  tagger.rs  tags.rs
src/app/: app.rs  args.rs  ascii.rs  core.rs  db.rs  deduplicate.rs  file.rs  main.rs  mod.rs  shrine.rs  tag.rs  tui.rs  ui.rs  video.rs
src/cli/: app.rs  args.rs  db.rs  file.rs  main.rs  tag.rs  ui.rs  video.rs
src/eros/: app.py  cli.py  db.py  error.py  file.py  processor.py  tagger.py  tui.py  video.py
tests/: common.rs  integration_test.rs  model.onnx  optimizer_test.rs  pipeline_test.rs  processor_test.rs  rating_test.rs  tagger_test.rs  test_app.py  test_cli.py  test_db.py  test_file.py  test_processor.py  test_tagger.py
