[package]
name = "eros"
version = "0.1.0"
edition = "2021"

[lib]
name = "eros"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eros"
path = "src/cli/main.rs"
required-features = ["cli"]


[features]
default = ["cli"]
cli = ["tokio", "tokio-stream", "futures-batch", "ratatui", "crossterm", "rusqlite", "sha2"]

cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]

[dependencies]
hf-hub = "0.4.1"
ort = { version = "=2.0.0-rc.10" }
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
image = "0.25.5"
serde = "1.0.217"
serde_json = "1.0.138"
ndarray = { version = "0.16", features = ["rayon"] }
csv = "1.3.1"
itertools = "0.14.0"
indexmap = "2.7.1"
futures = "0.3.31"

tokio = { version = "1.43.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
futures-batch = { version = "0.7.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
sha2 = { version = "0.10.8", optional = true }
clap = { version = "4.5.28", features = ["derive"], optional = true }


[dev-dependencies]
rand = "0.9.2"

# Profile for development builds (`cargo run` or `cargo build`)
[profile.dev]
codegen-units = 16  # Compiles many parts of your code in parallel.
debug = 2           # Includes full debugging information.
opt-level = 0       # No optimizations, which is fastest to compile.

# Profile for release builds (`cargo build --release`)
[profile.release]
lto = "fat"           # Enables "fat" Link-Time Optimization for maximum performance.
codegen-units = 1     # Compiles the crate as a single unit for the best optimization.
panic = "abort"       # Aborts on panic for a smaller, faster binary.
strip = true          # Removes debug symbols from the final executable.