[package]
name = "eros"
version = "0.1.0"
edition = "2021"

[lib]
name = "eros"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eros"
path = "src/app/main.rs"
required-features = ["cli"]


[features]
default = ["cli"]
cli = ["tokio", "tokio-stream", "futures-batch", "ratatui", "crossterm", "rusqlite", "sha2", "clap"]

cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
ort = { version = "=2.0.0-rc.10" }
anyhow = "1.0.95"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
image = "0.25.5"
serde = "1.0.217"
serde_json = "1.0.138"
ndarray = { version = "0.16", features = ["rayon"] }
csv = "1.3.1"
itertools = "0.14.0"
indexmap = "2.7.1"
futures = "0.3.31"
num_cpus = "1.16.0"
tokio = { version = "1.43.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
futures-batch = { version = "0.7.0", optional = true }
ratatui = { version = "0.29.0", optional = true, features = ["macros"] }
crossterm = { version = "0.29.0", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
sha2 = { version = "0.10.8", optional = true }
clap = { version = "4.5.28", features = ["derive"], optional = true }
walkdir = "2.5.0"
tempfile = "3.10.1"
thiserror = "2.0.17"
rayon = "1.10.0"
oxipng = "9.0.0"
mozjpeg = "0.10.0"
rgb = "0.8.50"
ffmpeg-next = "8.0.0"

[dev-dependencies]
rand = "0.9.2"

[profile.release]
lto = true